# bootcamp_python_aula17

./: README.md  desafio.db  desafio_01.py  desafio_query.py  pyproject.toml
