[tool.poetry]
name = "aula17"
version = "0.1.0"
description = "Porjeto de banco com SQLAlchemy"
authors = ["Felipe Velozo <felipe_velozo@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
